# sendingUnicorns

./: .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .prettierrc  .woodpecker.yml  CHANGELOG.md  Dockerfile  bun.lockb  components.json  makefile  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  windows_builder.nsi
.cargo/: config.toml
.github/workflows/: publish.yml
src/: app.css  tauriApi.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json  theme.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  services.rs
src-tauri/src/config/: home.rs
src-tauri/src/services/: api_service.rs  file_service.rs  old_structs.rs  structs.rs
src/components/: app-sidebar.svelte
src/components/dialogs/: addCollectionDialog.svelte  addEnvironmentDialog.svelte  addRequestDialog.svelte  editEnvironmentDialog.svelte  exportCollectionDialog.svelte  index.ts
src/components/forms/: index.ts  requestConfig.svelte
src/components/requestResult/: index.ts  requestResultViewer.svelte  result.svelte
src/enums/: bodyTypes.ts  methods.ts
src/lib/: utils.ts
src/lib/components/codemirror/: codemirror-single-line.svelte  codemirror.svelte  extensions.ts  index.ts
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/label/: label.svelte
src/lib/components/ui/radio-group/: radio-group-item.svelte  radio-group.svelte
src/lib/components/ui/resizable/: resizable-handle.svelte  resizable-pane-group.svelte
src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte  scroll-area.svelte
src/lib/components/ui/select/: select-content.svelte  select-item.svelte  select-label.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-separator.svelte  select-trigger.svelte
src/lib/components/ui/separator/: separator.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-overlay.svelte  sheet-portal.svelte  sheet-title.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: collection.svelte.ts  collections.svelte.ts  request.svelte.ts  rune.svelte.ts  sharedStore.ts  state.ts
src/types/: collection.type.ts  request.type.ts
(+27 files in other folders)
