[package]
name = "app"
version = "0.1.0"
description = "Sending Unicorns"
authors = ["Ajustor"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri-plugin-http = { version = "2.0.0", features = ["json", "unsafe-headers"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
home = "0.5.9"
tauri-plugin-theme = "0.4.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
derivative = "2.2.0"
specta = { version = "=2.0.0-rc.20", features = ["serde", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }
proxy_cfg = "0.4.1"
specta-typescript = "0.0.7"
muda = "0.15.3"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
